--- a/index.html
+++ b/index.html
@@ -3,32 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <title>calculator-design</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <form action="" name="calc" class="calculator">
-        <input type="text" class="value" readonly name="txt" />
-        <span class="num clear"><i>C</i></span>
-        <span class="num"><i>/</i></span>
-        <span class="num"><i>*</i></span>
-        <span class="num"><i>7</i></span>
-        <span class="num"><i>8</i></span>
-        <span class="num"><i>9</i></span>
-        <span class="num"><i>-</i></span>
-        <span class="num"><i>4</i></span>
-        <span class="num"><i>5</i></span>
-        <span class="num"><i>6</i></span>
-        <span class="num plus"><i>+</i></span>
-        <span class="num"><i>1</i></span>
-        <span class="num"><i>2</i></span>
-        <span class="num"><i>3</i></span>
-        <span class="num"><i>0</i></span>
-        <span class="num"><i>00</i></span>
-        <span class="num"><i>.</i></span>
-        <span class="num equal"><i>=</i></span>
-      </form>
+    <div class="calculator">
+      <input type="text" placeholder="0" />
+      <div>
+        <button id="clear">C</button>
+        <button>/</button>
+        <button>*</button>
+      </div>
+      <div>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>-</button>
+      </div>
+      <div>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button id="plus">+</button>
+      </div>
+      <div>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+      </div>
+      <div>
+        <button>0</button>
+        <button>00</button>
+        <button>.</button>
+        <button id="equal">=</button>
+      </div>
     </div>
   </body>
 </html>
